# pdopus

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bitrate.pd  opusdec-help.pd  opusdec~.c  opusenc-help.pd  opusenc~.c
opus/: CMakeLists.txt
